--- a/scss/scss/components/_list.scss
+++ b/scss/scss/components/_list.scss
@@ -74,7 +74,7 @@
     @extend .mb-4;
 
     .grid-wrapper{
-        @extend .overflow-auto;
+        @extend .table-responsive;
     }
 
     .buttons-row {
