--- a/scss/scss/components/_sidemenu.scss
+++ b/scss/scss/components/_sidemenu.scss
@@ -3,6 +3,7 @@
 .sidemenu-wrapper {
     
     @extend .d-flex;
+    @extend .overflow-auto;
 
     .sidebar {
         //background:$side-bar-background-color;
